<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="353dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="61dp">


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMarathon"
            android:textAlignment="center"
            android:textColor="#111012"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgMarathon"
            android:layout_width="wrap_content"
            android:layout_height="217dp"
            android:contentDescription="@string/txtDescription"
            android:cropToPadding="true"
            android:paddingBottom="0dp"
            android:src="@drawable/marathon_img1" />

        <TextView
            android:id="@+id/txtTimeTaken"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/TimeComple"
            android:textAlignment="center"
            android:textColor="#111012"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHours"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/InputHours"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/txtMinutes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/InputMinutes"
        app:layout_constraintEnd_toStartOf="@+id/InputMinutes"

        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/InputHours"
        android:layout_width="217dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/placeHolderHours"
        android:maxLength="3"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/InputMinutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/InputMinutes"
        android:layout_width="219dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/placeHolderMinutes"
        android:maxLength="3"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/InputHours" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="221dp"
        android:layout_height="71dp"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
         />


</androidx.constraintlayout.widget.ConstraintLayout>


