<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AverageResults_Activity">


    <TextView
        android:id="@+id/txtResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtMarathon"
        android:textAlignment="center"
        android:textColor="#111012"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="409dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResults" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="409dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOutput" />

    <ImageView
        android:id="@+id/ImgView"
        android:layout_width="316dp"
        android:layout_height="212dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStatus"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="222dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImgView" />

    <Button
        android:id="@+id/btnRace"
        android:layout_width="224dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnWeightchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />
</androidx.constraintlayout.widget.ConstraintLayout>