<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stats">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMarathon"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StatsDescription"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2" />

    <EditText
        android:id="@+id/numbeOfRacesRan"
        android:layout_width="260dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="Number of Marathons"
        android:inputType="number"
        android:maxLength="1"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="102dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtOutMessage"
        android:layout_width="377dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbeOfRacesRan" />

    <EditText
        android:id="@+id/inputMarathon"
        android:layout_width="259dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Enter average time per KM, HH.MM"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textAlignment="center"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/SubmitMarathon"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOutMessage" />

    <Button
        android:id="@+id/SubmitMarathon"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Submit"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOutMessage" />

    <Button
        android:id="@+id/btnfin"
        android:layout_width="135dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:text="@string/Submit"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMarathon" />

    <ListView
        android:id="@+id/ListView"
        android:layout_width="407dp"
        android:layout_height="324dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMarathon" />

</androidx.constraintlayout.widget.ConstraintLayout>